# dtvp

./: .dockerignore  .env.dist  .env.test  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.backup  LICENSE  README.md  auth.py  cliff.toml  compose.agentyzer-debug.yml  compose.agentyzer-token-rotation.yml  compose.archive-import-secret.yml  compose.ca-certs.yml  compose.secrets.yml  compose.session-key-rotation.yml  compose.yml  compose.yml.dist  dt_cache.py  dt_client.py  ecosystem.config.js  logic.py  main.py  nginx.conf  nginx.conf.template  pyproject.toml  start.sh  tmrescore_integration.py
agentyzer/: .dockerignore  .env.dist  .gitignore  Dockerfile  README.md  docker-compose.yml  ecosystem.config.cjs  pyproject.toml
agentyzer/config/: repos.container.yaml
agentyzer/config/prompts/: advisory_relevance.yaml  benchmark_comparison.yaml  code_reachability.yaml  common.yaml  deep_analysis.yaml  transitive_analysis.yaml  verdict.yaml
agentyzer/src/: __init__.py  benchmark.py  cli.py  configuration.py  http.py  job_runtime.py  job_store.py  main.py  runtime_coordination.py  security.py
agentyzer/src/agents/: __init__.py  ast_analyzer.py  code_scanner.py  cvss_scoring.py  dependency_scanner.py  verdict.py  version_analyzer.py  web_fetcher.py  web_research.py
agentyzer/src/api/: __init__.py  jobs.py  models.py
agentyzer/src/languages/: __init__.py  base.py  registry.py
agentyzer/src/languages/cpp/: __init__.py
agentyzer/src/languages/go/: __init__.py
agentyzer/src/languages/java/: __init__.py
agentyzer/src/languages/javascript/: __init__.py
agentyzer/src/languages/php/: __init__.py
agentyzer/src/languages/python/: __init__.py
agentyzer/src/languages/ruby/: __init__.py
agentyzer/src/languages/rust/: __init__.py
agentyzer/src/llm/: __init__.py  base.py  ollama_client.py  openwebui_client.py  prompt_registry.py
agentyzer/src/pipeline/: __init__.py  advisory_context.py  graph.py  nodes.py  state.py  verdict_assembly.py
agentyzer/tests/: conftest.py  test_ast_analyzer.py  test_basic.py  test_benchmark.py  test_cli.py  test_code_scanner.py  test_configuration.py  test_cvss_scoring.py  test_dependency_scanner.py  test_filter_advisory.py  test_graph_inputs.py  test_job_store.py  test_llm_factory.py  test_prompt_registry.py  test_runtime_coordination.py  test_verdict.py  test_version_analyzer.py  test_web_fetcher.py  test_web_research.py
data/: rescore_rules.json  team_mapping.json  tmrescore_proposals.json  user_roles.json
docs/: configuration.md  conventions.md  index.md  integration-api-surface.md  project.md  screens.md  threat-model.md  workflow-flowcharts.md
dtvp/: agentizer_integration.py  analysis_queue_runtime.py  analysis_queue_services.py  analysis_queue_state_services.py  app_bootstrap.py  app_constants.py  app_info_routes.py  app_info_services.py  app_wiring.py  assessment_restore_services.py  assessment_services.py  auth.py  authorization.py  auto_analysis_services.py  boot.py  code_analysis_assessment_services.py  code_analysis_benchmark_services.py  code_analysis_integration.py  code_analysis_result_services.py  code_analysis_routes.py  configuration.py  dt_cache.py  dt_client.py  file_io_services.py  frontend_routes.py  general_api_models.py  general_api_routes.py  grouped_vuln_services.py  grouped_vuln_summary_index_services.py  grouped_vuln_task_services.py  inconsistency.py  integration_auth.py  knowledge_store.py  logic.py  main.py  project_archive_routes.py  project_archive_services.py  request_security.py  rescore_rule_services.py  runtime_coordination.py  (+22 more)
frontend/: all_tests_output.txt  coverage_extras_output.txt  debug-payload.js  entrypoint.sh  final_coverage_report.txt  frontend_test_fail_log.txt  index.html  nginx.conf  output_log  package-lock.json  package.json  playwright.config.ts  playwright.manual.config.ts  test_coverage_output.txt  test_coverage_output_final.txt  test_cvss_multiple.cjs  test_cvss_multiple2.cjs  test_cvss_multiple3.cjs  test_frontend.js  test_output.txt  test_output_2.txt  test_parse.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
openapi/: code-analysis-openapi.json  tmrescore-openapi.json  vscorer-openapi.json
sbom/: dtvp-backend-cyclonedx.json  (+1 more)
secrets/: README.md
(+322 files in other folders)
