[project]
name = "dtvp"
version = "1.0.7"
authors = ["phbaer <git@ph.baer.one>"]
urls = { "Homepage" = "https://baer.one", "Main repo" = "https://git.baer.one/phbaer/dtvp", "GitHub" = "https://github.com/phbaer/dtvp", "Mastodon" = "https://baer.im/@phbaer" }
description = "A vulnerability management platform for dependency track"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "python-jose[cryptography]",
    "pydantic-settings",
    "python-multipart"
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "git-cliff>=2.7.0",
    "cyclonedx-bom>=7.2.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = "."
addopts = "--cov=. --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
omit = [
    "tests/*",
    "reproduce_issue.py",
    "debug_finding.py",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
