[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentyzer"
version = "0.1.0"
description = "Agentic Vulnerability Analyzer"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.95.0",
  "uvicorn[standard]>=0.20.0",
  "httpx",
  "PyYAML",
  "gitpython",
  "pydantic",
  "packaging",
  "toml",
  "langgraph>=1.1.9",
  "cvss>=3.6",
]

[project.scripts]
agentyzer = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.uv]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
